JDK 25: update JEPs notes and examples